--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,24 +1,3 @@
-<div class="container">
-  <div class="row clearfix">
-    <div class="col-md-12 column">
-      <div class="jumbotron">
-        <h1>
-          <%= @article.title %>
-        </h1>
-        <p>
-          <%= @article.content %>
-        </p>
-        <p>
-           <a class="btn btn-primary btn-large" href="#">Learn more</a>
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
-
 
 <p id="notice"><%= notice %></p>
 
@@ -29,7 +8,7 @@
 
 <p>
   <strong>Content:</strong>
-  <%= @article.content %>
+  <%= raw @article.content %>
 </p>
 
 <p>
@@ -41,7 +20,7 @@
   <strong>Labels:</strong>
   <% @article.labels.each do |l| %>
   <li>
-     <%= l.name %>
+     <%= raw l.name %>
   </li>
   <% end %>
  
@@ -55,6 +34,35 @@
   <strong>Readnumber:</strong>
   <%= @article.read_number %>
 </p>
+<p>
+  <strong>图片:</strong>
+<% if not @article&.avatar&.url.blank? %>
+<img src="<%= @article.avatar.url('40') %>">
+<% end %>
+</p>
+
+<hr />
+<% @pictures.each_with_index do |picture, index| %>
+   <% if picture.persisted? %>
+  <img src="<%= picture.image.url('40') %>">
+    <%= link_to "修改", edit_article_picture_path(id: picture.id, article_id: params[:id]), class: "btn btn-default btn-xs" %>
+    <%= link_to "删除", article_picture_path(id: picture.id, article_id: params[:id]), method: :delete, class: "btn btn-default btn-xs" %>
+  <% if (index + 1) % 2 == 0 %>
+    <br />
+  <% end -%>
+  <% end -%>
+  <% end %>
+<hr />
+
+<%= simple_form_for(@picture, url: article_pictures_path(article_id: params[:id]), html: { multipart: true, class: "form-horizontal" }) do |f| %>
+  <%= f.input :image, label: "图片" %>
+  <div class="line line-dashed b-b line-lg pull-in"></div>
+  <div class="col-sm-10 col-sm-offset-2">
+    <%= f.button :submit, "提 交", class: "btn btn-primary" %>
+    <%= link_to "返 回", :back, class: "btn btn-default" %>
+  </div>
+<% end %>
+
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
