--- a/app/views/labels/_form.html.erb
+++ b/app/views/labels/_form.html.erb
@@ -1,5 +1,12 @@
 <%= simple_form_for(@label, html: { multipart: true, class: "form-horizontal" }) do |f| %>
-  <%= f.input :name, label: "标签名字" %>
+<div class="form-group text required page_content">
+    <label class="text  col-sm-2 control-label" for="page_content">
+      标签名
+    </label>
+    <div class="col-sm-10">
+      <script type="text/plain" id="contentEditor" name="label[name]" id="label_name" style="width:800px;height:300px;"><%= raw(@label.name) %></script>
+    </div>
+  </div>
   <%= f.input :number, label: "使用次数" %>
 
 
@@ -8,6 +15,19 @@
     <%= f.button :submit, "提 交", class: "btn btn-primary" %>
     <%= link_to "返 回", :back, class: "btn btn-default" %>
   </div>
+<% end %>
+
+<%= content_for :style do %>
+  <link href="/umeditor/themes/default/css/umeditor.css" type="text/css" rel="stylesheet">
+<% end %>
+
+<% content_for :script do %>
+  <script type="text/javascript" charset="utf-8" src="/umeditor/umeditor.config.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/umeditor/umeditor.min.js"></script>
+  <script type="text/javascript" charset="utf-8" src="/umeditor/lang/zh-cn/zh-cn.js"></script>
+  <script type="text/javascript">
+    var um1 = UM.getEditor('contentEditor');
+  </script>
 <% end %>
 
 
