--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -1,17 +1,9 @@
-<%= form_with(model: picture, local: true) do |form| %>
-  <% if picture.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(picture.errors.count, "error") %> prohibited this picture from being saved:</h2>
-
-      <ul>
-      <% picture.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= form.submit %>
+<%= simple_form_for(@picture, url: article_picture_path(id: picture.id), html: { multipart: true, class: "form-horizontal" }) do |f| %>
+  <img src="<%= picture.image.url %>">
+  <%= f.input :image, label: "图片" %>
+  <div class="line line-dashed b-b line-lg pull-in"></div>
+  <div class="col-sm-10 col-sm-offset-2">
+    <%= f.button :submit, "提 交", class: "btn btn-primary" %>
+    <%= link_to "返 回", :back, class: "btn btn-default" %>
   </div>
 <% end %>
