--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', picture: @picture %>
 
-<%= link_to 'Show', @picture %> |
-<%= link_to 'Back', pictures_path %>
+<%#= link_to 'Show', article_picture_path(id: picture.id, article_id: params[:id])%> |
+<%#= link_to 'Back', article_picture_path(id: picture.id, article_id: params[:id])%>
