--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -12,16 +12,16 @@
     </div>
   </div>
   <div class="table-responsive">
-    <table class="table table-striped b-t b-light">
+    <table style="table-layout:fixed" class="table table-striped b-t b-light">
       <thead>
         <tr>
-          <th>Title</th>
-          <th>Content</th>
-          <th>From</th>
-          <th>Url</th>
-          <th>Readnumber</th>
-          <th style="width:120px;">创建时间</th>
-          <th>操作</th>
+          <th width="10%">Title</th>
+          <th width="20%">Content</th>
+          <th width="10%">From</th>
+          <th width="10%">Url</th>
+          <th width="10%">Readnumber</th>
+          <th style="width:150px;">创建时间</th>
+          <th width="15%">操作</th>
         </tr>
       </thead>
       <tbody>
