--- a/app/views/shared/admin/_header.html.erb
+++ b/app/views/shared/admin/_header.html.erb
@@ -10,7 +10,7 @@
     <!-- brand -->
     <div class="block m-l-sm m-t-sm">
       <a href="/admin/home" >
-        <h2><%= @current_site&.name || "文章采集" %></h2>
+        <h2>文章采集</h2>
       </a>
     </div>
     <!-- / brand -->
@@ -80,13 +80,13 @@
     <!-- nabar right -->
     <ul class="nav navbar-nav navbar-right" id="merchant_not_yz">
       <li class="dropdown" style="padding-bottom: 15px;padding-top: 15px">
-        <small><%= @current_site&.domain || "" %></small>
+        <small></small>
       </li>
       <li class="dropdown">
         <a href="#" data-toggle="dropdown" class="dropdown-toggle">
           <i class="icon-bell fa-fw"></i>
           <span class="visible-xs-inline">通知消息</span>
-          <span class="badge badge-sm up bg-danger pull-right-xs" v-if="not_yz_users.length > 0">{{not_yz_users.length}}</span>
+          <span class="badge badge-sm up bg-danger pull-right-xs" v-if="not_yz_users.length > 0"></span>
         </a>
         <!-- dropdown -->
         <div class="dropdown-menu w-xl animated fadeInUp">
@@ -112,7 +112,7 @@
       <li class="dropdown">
         <a href="#" data-toggle="dropdown" class="dropdown-toggle clear" data-toggle="dropdown">
           <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-            <img src="<%= @current_user.avatar %>" alt="...">
+            <img src="<%= current_user.avatar %>" alt="...">
             <i class="on md b-white bottom"></i>
           </span>
           <span class="hidden-sm hidden-md"><%= current_user.email %></span> <b class="caret"></b>
