--- a/app/views/shared/admin/_sidemenu.html.erb
+++ b/app/views/shared/admin/_sidemenu.html.erb
@@ -45,13 +45,11 @@
           <% end %>
 
           <li class="<%= "active" if controller_name == "labels" %>">
-                <a href="/pictures" class="auto">
+                <a href="/photos" class="auto">
                   <i class="glyphicon glyphicon-picture"></i>
                   <span>图片管理</span>
                 </a>
           </li>
-
-
         </ul>
       </nav>
       <!-- nav -->
