--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -56,13 +56,13 @@
 
 <%= simple_form_for(@picture, url: article_pictures_path(article_id: params[:id]), html: { multipart: true, class: "form-horizontal" }) do |f| %>
   <%= f.input :image, label: "图片" %>
-  <div class="line line-dashed b-b line-lg pull-in"></div>
   <div class="col-sm-10 col-sm-offset-2">
-    <%= f.button :submit, "提 交", class: "btn btn-primary" %>
-    <%= link_to "返 回", :back, class: "btn btn-default" %>
+    <%= f.button :submit, "提交素材", class: "btn btn-primary" %>
+    <%#= link_to "返回", :back, class: "btn btn-default" %>
   </div>
 <% end %>
+<div class="line line-dashed b-b line-lg pull-in"></div>
 
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<%= link_to '编辑文章', edit_article_path(@article) ,class: "btn btn-default" %> |
+<%= link_to '返回首页', articles_path ,class: "btn btn-default"%>
