--- a/app/views/labels/show.html.erb
+++ b/app/views/labels/show.html.erb
@@ -10,5 +10,5 @@
   <%= @label.number %>
 </p>
 
-<%= link_to 'Edit', edit_label_path(@label) %> |
-<%= link_to 'Back', labels_path %>
+<%= link_to 'Edit', edit_label_path(@label) ,class: "btn btn-default"%> |
+<%= link_to 'Back', labels_path ,class: "btn btn-default"%>
