--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,10 +14,5 @@
   <%= @user.username %>
 </p>
 
-<p>
-  <strong>Password:</strong>
-  <%= @user.password %>
-</p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Edit', edit_user_path(@user) ,class: "btn btn-default"%> |
+<%= link_to 'Back', users_path ,class: "btn btn-default"%>
