--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -16,7 +16,7 @@
       <thead>
         <tr>
           <th width="10%">Title</th>
-          <th width="20%">Content</th>
+         <!--  <th width="20%">Content</th> -->
           <th width="10%">From</th>
           <th width="10%">Url</th>
           <th width="10%">Readnumber</th>
