--- a/app/views/labels/_label.html.erb
+++ b/app/views/labels/_label.html.erb
@@ -5,8 +5,13 @@
   <td><%= label.created_at.strftime("%F") %></td>
   <td>
   	<%= link_to "查看", label, class: "btn btn-default btn-xs" %>
+    <% if can?(:update, label)  %>
     <%= link_to "修改", edit_label_path(label), class: "btn btn-default btn-xs" %>
+     <% end -%>
+    <% if can?(:destroy, label)  %>
     <%= link_to "删除", label_path(label), method: :delete, class: "btn btn-default btn-xs" %>
+     <% end -%>
+     <% if can?(:update, label)  %>
     <% if label.forbid %>
     <%= link_to "取消禁用", permit_label_path(label, page: params[:page]), method: :put, class: "btn 
      		btn-success btn-xs" %>    
@@ -14,5 +19,6 @@
     <%= link_to "禁用", forbid_label_path(label, page: params[:page]), method: :put, class: "btn 
     		btn-danger btn-xs" %> 
      <% end -%>
+      <% end -%>
   </td>
 </tr>
