--- a/app/views/labels/edit.html.erb
+++ b/app/views/labels/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', label: @label %>
 
-<%= link_to 'Show', @label %> |
-<%= link_to 'Back', labels_path %>
+<%= link_to 'Show', @label ,class: "btn btn-default"%> |
+<%= link_to 'Back', labels_path ,class: "btn btn-default"%>
