--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -18,8 +18,12 @@
   <td><%=image_tag photo.image.url('40') %></td>
   <td><%= photo.created_at.strftime("%F") %></td>
   <td>
+    <% if can?(:update, Picture)  %>
     <%= link_to "修改", edit_photo_path(photo), class: "btn btn-default btn-xs" %>
+    <% end -%>
+    <% if can?(:destroy, Picture)  %>
     <%= link_to "删除", photo_path(photo), method: :delete, class: "btn btn-default btn-xs" %>
+    <% end -%>
   </td>
 </tr>
 <% end -%>
