--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
     <%= link_to "修改", edit_article_path(article), class: "btn btn-default btn-xs" %>
     <% end -%>
     <% if can?(:detroy, article)  %>
-    <%= link_to "删除", article_path(article), method: :delete, class: "btn btn-default btn-xs" %>
+    <%= link_to "删除", article_path(article), method: :delete, class: "btn btn-danger btn-xs" %>
     <% end -%>
   </td>
 </tr>
