--- a/app/views/labels/_label.html.erb
+++ b/app/views/labels/_label.html.erb
@@ -9,7 +9,7 @@
     <%= link_to "修改", edit_label_path(label), class: "btn btn-default btn-xs" %>
      <% end -%>
     <% if can?(:destroy, label)  %>
-    <%= link_to "删除", label_path(label), method: :delete, class: "btn btn-default btn-xs" %>
+    <%= link_to "删除", label_path(label), method: :delete, class: "btn btn-danger btn-xs" %>
      <% end -%>
      <% if can?(:update, label)  %>
     <% if label.forbid %>
@@ -17,7 +17,7 @@
      		btn-success btn-xs" %>    
     <% else %>
     <%= link_to "禁用", forbid_label_path(label, page: params[:page]), method: :put, class: "btn 
-    		btn-danger btn-xs" %> 
+    		btn-warning btn-xs" %> 
      <% end -%>
       <% end -%>
   </td>
