update article create

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,7 +3,7 @@
   <form action="/articles" method="get">
   title<input type="text" id="title" name="title" value="<%= params[:title] %>">
   content<input type="text" id="content" name="content" value="<%= params[:content] %>">
-  <input type="submit" name="" value="搜索">
+  <input type="submit" name="" value="搜索" class="btn btn-primary">
 </form>
   <div class="panel-heading">
     文章列表
